# DATN_dashboard_car

./: .clangd  CMakeLists.txt  Main.qml  main.cpp
config/: AppConfig.h
connectivity/: BleServer.cpp  BleServer.h
diagrams/: class-diagram.drawio
doccument/: cross_compiler.MD
hardware/: LedController.cpp  LedController.h  MotorController.cpp  MotorController.h  SpeedSensor.cpp  SpeedSensor.h  TempSensor.cpp  TempSensor.h
models/: VehicleModel.h
ui/components/: CenterGaugePanel.qml  IntroOverlay.qml  LeftDashboardPanel.qml  MotorControl.qml  RightStatsPanel.qml  SpeedGauge.qml  TempDisplay.qml  TopBar.qml  VoiceIndicator.qml
